--- a/day 2nd/index.html
+++ b/day 2nd/index.html
@@ -68,200 +68,310 @@
       </div>
     </div>
   </nav>
-  <div id="main-content">
-    <!-- <img src="assets/2062.jpg" alt="img"> -->
-    <h2> Learning Today, <br> Leading Tomorrow</h2>
-    <p>We are team of talented designers making websites with Bootstrap</p>
-    <button class="btn-btn">Get Started</button>
-  </div>
-  <section id="about" class="about section">
-    <div class="container">
-      <div class="row gy-4">
-        <div class="col-lg-6">
-          <h3>Voluptatem dignissimos provident quasi corporis</h3>
-          <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.</i>
-          <ul>
-            <li>
-              <i class="fa-regular fa-circle-check" style="color: #63E6BE;"></i>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </li>
-            <li>
-              <i class="fa-regular fa-circle-check" style="color: #63E6BE;"></i>
-              Duis aute irure dolor in reprehenderit in voluptate velit.
-            </li>
-            <li>
-              <i class="fa-regular fa-circle-check" style="color: #63E6BE;"></i>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.
-            </li>
-          </ul>
-          <button onclick=""> Read More</button>
+  <main>
+    <div id="main-content">
+      <!-- <img src="assets/2062.jpg" alt="img"> -->
+      <h2> Learning Today, <br> Leading Tomorrow</h2>
+      <p>We are team of talented designers making websites with Bootstrap</p>
+      <button class="btn-btn">Get Started</button>
+    </div>
+    <section id="about" class="about section">
+      <div class="container">
+        <div class="row gy-4">
+          <div class="col-lg-6">
+            <h3>Voluptatem dignissimos provident quasi corporis</h3>
+            <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.</i>
+            <ul>
+              <li>
+                <i class="fa-regular fa-circle-check" style="color: #63E6BE;"></i>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </li>
+              <li>
+                <i class="fa-regular fa-circle-check" style="color: #63E6BE;"></i>
+                Duis aute irure dolor in reprehenderit in voluptate velit.
+              </li>
+              <li>
+                <i class="fa-regular fa-circle-check" style="color: #63E6BE;"></i>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.
+              </li>
+            </ul>
+            <button onclick=""> Read More</button>
+          </div>
+          <div id="image-" class="col-lg-6">
+            <img src="assets/about.jpg" class="img-fluid" alt="img">
+          </div>
+
         </div>
-        <div id="image-" class="col-lg-6">
-          <img src="assets/about.jpg" class="img-fluid" alt="img">
+      </div>
+    </section>
+
+    <section id="count" class="count-section">
+      <div id="count-main">
+        <div id="student" class="count-main">
+          <p>1232</p>
+          <h3>Students</h3>
+        </div>
+        <div id="courses" class="count-main">
+          <p>64</p>
+          <h3>Courses</h3>
+        </div>
+        <div id="events" class="count-main">
+          <p>42</p>
+          <h3>Events</h3>
+        </div>
+        <div id="trainers" class="count-main">
+          <p>24</p>
+          <h3>Trainers</h3>
+        </div>
+      </div>
+    </section>
+
+
+    <section id="why-us" class="why-us section">
+      <div id="why-us-container" class="">
+        <div id="product" class="col-lg-3">
+          <h2>Why Choose Our Products?</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Duis aute irure dolor in reprehenderit Asperiores dolores sed et. Tenetur quia eos. Autem
+            tempore quibusdam vel necessitatibus optio ad corporis.</p>
+          <button onclick="">Learn More ></button>
+        </div>
+        <div id="product-points" class="col-lg-9 ">
+          <div id="points1" class="points col-lg-4">
+            <i class="fa-solid fa-square-poll-vertical fa-lg pointshape" style="color: #63E6BE;"></i>
+            <h4> Corporis voluptates officia eiusmod</h4>
+            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+          </div>
+          <div id="points2" class="points col-lg-4">
+            <i class="fa-regular fa-gem pointshape" style="color: #63E6BE;"></i>
+            <h4>Ullamco laboris ladore pan</h4>
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+          </div>
+          <div id="points3" class="points col-lg-4">
+            <i class="fa-solid fa-inbox pointshape" style="color: #63E6BE;"></i>
+            <h4>Labore consequatur incidid dolore</h4>
+            <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="features" class="features">
+      <div id="features-container" class="container">
+        <div id="row-1st" class="row1">
+          <div><i class="fa-regular fa-eye" style="color: #FFD43B;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+
+          </div>
+          <div>
+            <i class="fa-solid fa-infinity" style="color: #0091ff;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+
+          <div>
+            <i class="fa-solid fa-layer-group" style="color: #dd2222;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+
+          <div> <i class="fa-solid fa-rocket" style="color: #e80368;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+
         </div>
 
+        <div id="row-2nd" class="row1">
+          <div>
+            <i class="fa-solid fa-shuffle" style="color: #74C0FC;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+          <div><i class="fa-regular fa-star" style="color: #FFD43B;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+
+          </div>
+          <div><i class="fa-solid fa-cubes" style="color: #74C0FC;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+
+          </div>
+          <div><i class="fa-solid fa-video" style="color: #74C0FC;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+        </div>
+
+        <div id="row-3rd" class="row1">
+          <div><i class="fa-brands fa-artstation" style="color: #aac71a;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+
+          </div>
+          <div>
+            <i class="fa-solid fa-basketball" style="color: #74C0FC;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+          <div><i class="fa-solid fa-heart-pulse" style="color: #63E6BE;"></i>
+
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+          <div>
+            <i class="fa-regular fa-sun" style="color: #FFD43B;"></i>
+            <h3><a href="#">Lorem Ipsum</a></h3>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <section id="courses" class="courses">
+      <div id="title">
+        <h2>courses</h2>
+        <p>popular courses</p>
+      </div>
+
+      <div id="container" class="container">
+        <div id="card1" class="card">
+          <img src="assets/course-1.jpg" class="card-img-top" alt="...">
+          <div class="tag">
+            <mark> Web Development </mark>
+            <div class="price">$169</div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Website Design</h5>
+            <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.
+            </p>
+          </div>
+          <div class="traine">
+            <img src="assets/trainers-1.jpg" alt="img">
+            <h5>Antonio</h5>
+          </div>
+        </div>
+        <div id="card2" class="card">
+          <img src="assets/course-2.jpg" class="card-img-top" alt="...">
+          <div class="tag">
+            <mark> Marketing </mark>
+            <div class="price">$250</div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Search Engine Optimization</h5>
+            <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.
+            </p>
+          </div>
+          <div class="traine">
+            <img src="assets/trainers-2.jpg" alt="img">
+            <h5>Lana</h5>
+          </div>
+        </div>
+        <div id="card2" class="card">
+          <img src="assets/course-3.jpg" class="card-img-top" alt="...">
+          <div class="tag">
+            <mark> Content </mark>
+            <div class="price">$180</div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Copywriting</h5>
+            <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.
+            </p>
+          </div>
+          <div class="traine">
+            <img src="assets/trainers-3.jpg" alt="img">
+            <h5>Brandon</h5>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="trainers-index" class="trainers-index section">
+      <div id="trainers-container" class="container">
+        <div id="trainers-card1" class="trainers-cards">
+          <img src="assets/tr/trainer-1.jpg" alt="">
+          <h4>Walter White</h4>
+          <h6>Web Development</h6>
+          <p>Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus</p>
+          <div class="social">
+            <a href=""><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+          </div>
+        </div>
+        <div id="trainers-card2" class="trainers-cards">
+          <img src="assets/tr/trainer-2.jpg" alt="">
+          <h4>Sarah Jhinson</h4>
+          <h6>Marketing</h6>
+          <p>Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus</p>
+          <div class="social">
+            <a href=""><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+          </div>
+        </div>
+        <div id="trainers-card3" class="trainers-cards">
+          <img src="assets/tr/trainer-3.jpg" alt="">
+          <h4>William Anderson</h4>
+          <h6>Content</h6>
+          <p>Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus</p>
+          <div class="social">
+            <a href=""><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </main>
+  <footer>
+    <div id="footer-container" class="container">
+      <div id="" class="footer-section">
+        <h2>Mentor</h2>
+        <address>A108 Adam Street <br>New York, NY 535022</address>
+        <strong>Phone:</strong> 123-456-7890 <br>
+        <strong>Email:</strong> info@example.com
+        <div id="social" class="social">
+          <a href=""><i class="fa-brands fa-x-twitter fa-lg"></i></a>
+          <a href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
+          <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+        </div>
+      </div>
+      <div id="" class="footer-section">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About us</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Terms of service</a></li>
+          <li><a href="">Privacy policy</a></li>
+      </div>
+      <div id="" class="footer-section">
+        <h4>Our Services</h4>
+        <ul>
+          <li><a href="">Web Design</a></li>
+          <li><a href="">Web Development</a></li>
+          <li><a href="">Product Management</a></li>
+          <li><a href="">Marketing</a></li>
+          <li><a href="">Graphic Design</a></li>
+      </div>
+      <div id="" class="footer-section">
+        <h4>Our Newsletter</h4>
+        <p>Subscribe to our newsletter and receive the
+          <br>latest news about our products and services!</p>
+          <div class="newsform">
+            <input type="email" placeholder="">
+            <input type="submit" value="Subscribe">
+
+          </div>
       </div>
     </div>
-  </section>
-
-  <section id="count" class="count-section">
-    <div id="count-main">
-      <div id="student" class="count-main">
-        <p>1232</p>
-        <h3>Students</h3>
-      </div>
-      <div id="courses" class="count-main">
-        <p>64</p>
-        <h3>Courses</h3>
-      </div>
-      <div id="events" class="count-main">
-        <p>42</p>
-        <h3>Events</h3>
-      </div>
-      <div id="trainers" class="count-main">
-        <p>24</p>
-        <h3>Trainers</h3>
-      </div>
+    <div id="Copywrite">
+      <p>Copywrite &copy; 2021 <strong><span>Mentor</span></strong> All Rights Reserved</p>
+      <div class="credits">
+        
+        Designed by <a href="https://www.github.com/iamanajaz/">Aman Ajaz</a> 
+      </a></div>
     </div>
-  </section>
-
-
-  <section id="why-us" class="why-us section">
-    <div id="why-us-container" class="">
-      <div id="product" class="col-lg-3">
-        <h2>Why Choose Our Products?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Duis aute irure dolor in reprehenderit Asperiores dolores sed et. Tenetur quia eos. Autem
-          tempore quibusdam vel necessitatibus optio ad corporis.</p>
-        <button onclick="">Learn More ></button>
-      </div>
-      <div id="product-points" class="col-lg-9">
-        <div id="points1" class="points col-lg-4">
-          <i class="fa-solid fa-square-poll-vertical fa-lg pointshape" style="color: #63E6BE;"></i>
-          <h4> Corporis voluptates officia eiusmod</h4>
-          <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-        </div>
-        <div id="points2" class="points col-lg-4">
-          <i class="fa-regular fa-gem pointshape" style="color: #63E6BE;"></i>
-          <h4>Ullamco laboris ladore pan</h4>
-          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-        </div>
-        <div id="points3" class="points col-lg-4">
-          <i class="fa-solid fa-inbox pointshape" style="color: #63E6BE;"></i>
-          <h4>Labore consequatur incidid dolore</h4>
-          <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="features" class="features">
-    <div id="features-container" class="">
-      <div id="row-1st" class="row1">
-        <div><i class="fa-regular fa-eye" style="color: #FFD43B;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-
-        </div>
-        <div>
-          <i class="fa-solid fa-infinity" style="color: #0091ff;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-
-        <div>
-          <i class="fa-solid fa-layer-group" style="color: #dd2222;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-
-        <div> <i class="fa-solid fa-rocket" style="color: #e80368;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-
-      </div>
-
-      <div id="row-2nd" class="row1">
-        <div>
-          <i class="fa-solid fa-shuffle" style="color: #74C0FC;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-        <div><i class="fa-regular fa-star" style="color: #FFD43B;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-
-        </div>
-        <div><i class="fa-solid fa-cubes" style="color: #74C0FC;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-
-        </div>
-        <div><i class="fa-solid fa-video" style="color: #74C0FC;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-      </div>
-
-      <div id="row-3rd" class="row1">
-        <div><i class="fa-brands fa-artstation" style="color: #aac71a;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-
-        </div>
-        <div>
-          <i class="fa-solid fa-basketball" style="color: #74C0FC;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-        <div><i class="fa-solid fa-heart-pulse" style="color: #63E6BE;"></i>
-
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-        <div>
-          <i class="fa-regular fa-sun" style="color: #FFD43B;"></i>
-          <h3><a href="#">Lorem Ipsum</a></h3>
-        </div>
-      </div>
-
-    </div>
-  </section>
-  <section id="courses" class="courses">
-    <div id="title">
-      <h2>courses</h2>
-      <p>popular courses</p>
-    </div>
-
-    <div id="container" class="container">
-      <div id="card1" class="card">
-        <img src="assets/course-1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Website Design</h5>
-          <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-        </div>
-        <div class="traine">
-          <img src="assets/trainers-1.jpg" alt="img">
-          <h5>Antonio</h5>
-        </div>
-      </div>
-      <div id="card2" class="card">
-        <img src="assets/course-2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Search Engine Optimization</h5>
-          <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-        </div>
-        <div class="traine">
-          <img src="assets/trainers-2.jpg" alt="img">
-          <h5>Lana</h5>
-        </div>
-      </div>
-      <div id="card2" class="card">
-        <img src="assets/course-3.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Copywriting</h5>
-          <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-        </div>
-        <div class="traine">
-          <img src="assets/trainers-3.jpg" alt="img">
-          <h5>Brandon</h5>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  </footer>
 
 
 
